<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="save_pdf">Save to PDF</string>

    <string-array name="todo_status">
        <item>To Do</item>
        <item>In Progress</item>
        <item>Done</item>
    </string-array>
    <string name="title_activity_to_do_detail">ToDoDetailActivity</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter a title</string>
    <string name="desc">Description</string>
    <string name="enter_desc">Enter a description</string>
    <string name="due_time">Due-time</string>
    <string name="date_text">hh:mm dd/MM/yyyy</string>
    <string name="status">Status</string>
    <string name="select_status">Select a status</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="no_record">You have no item in this category.</string>
    <string name="search">Search</string>
    <string name="sort_by_asc">Sort by Name ASC</string>
    <string name="sort_by_desc">Sort by Name DESC</string>
    <string name="title_todo">Title of To Do</string>
    <string name="delete">Delete</string>
</resources>
