<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_create"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_create"
    android:layout_below="@+id/content_create"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/firstLinear">
        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            android:textSize="18sp"
            android:textColor="#000"/>
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_title"
            android:ems="10"
            android:layout_marginTop="16dp"/>
        <TextView
            android:text="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/descTextView"
            android:layout_marginTop="16dp" />
        <EditText
            android:id="@+id/etDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/enter_desc"
            android:lines="4"
            android:maxLines="4"
            android:gravity="start"
            android:layout_marginTop="16dp"/>

        <TextView
            android:text="@string/due_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/duetimeTextView"
            android:textColor="#000"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnDate"
            android:text="@string/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="18dp"
            android:text="@string/status"
            android:textSize="18sp"/>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/msToDoItem"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/select_status"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/thirdLinear"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:id="@+id/cancelCreateButton"
            android:layout_width="0dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/create"
            android:layout_height="wrap_content"
            android:id="@+id/createButton"
            android:enabled="true"
            android:layout_width="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
