<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

            <!-- Username Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_email"
                    android:textSize="15sp"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    tools:targetApi="o"
                    android:drawableLeft="@drawable/ic_email"
                    android:layout_marginLeft="8dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginLeft="8dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:background="@android:color/transparent"
                    android:textSize="15sp"
                    android:drawablePadding="8dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    tools:targetApi="o"
                    android:drawableLeft="@drawable/ic_lock"
                    android:layout_marginLeft="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textStyle="bold"
                android:background="@color/orange"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"/>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>


